Integrate select command and fxml

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -58,6 +58,8 @@
                </children>
             </HBox>
 
+        <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+      </VBox>
     </Scene>
   </scene>
 </fx:root>
