--- a/src/main/resources/view/AnswerableListCard.fxml
+++ b/src/main/resources/view/AnswerableListCard.fxml
@@ -27,6 +27,7 @@
         </Label>
         <Label fx:id="question" text="\$first" styleClass="cell_big_label" />
       </HBox>
+      <FlowPane fx:id="answer1" />
       <FlowPane fx:id="tags" />
       <Label fx:id="difficulty" styleClass="cell_small_label" text="\$difficulty" />
       <Label fx:id="category" styleClass="cell_small_label" text="\$category" />
