Implement typing game skeleton using JavaFX

--- a/src/main/resources/view/GameWindow.fxml
+++ b/src/main/resources/view/GameWindow.fxml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<VBox id="" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <Label text="Game Window" />
-</VBox>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.Scene?>
+<?import javafx.stage.Stage?>
+<fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+         title="TypingGame" onCloseRequest="#handleExit">
+    <scene>
+        <Scene>
+            <AnchorPane fx:id="gamePlay" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="750.0">
+                <children>
+                    <TextField fx:id="playerInputArea" prefHeight="600.0" prefWidth="800.0" onAction="#handlePlayerInput" opacity="0.0"/>
+                    <Label styleClass="userOut" layoutX="350.0" layoutY="550" text="${playerInputArea.text}"/>
+                    <Label fx:id="gameOver" prefHeight="600.0" prefWidth="800.0" text="GAME OVER" layoutX="350.0"/>
+                </children>
+            </AnchorPane>
+        </Scene>
+    </scene>
+</fx:root>
+
