--- a/src/main/resources/view/InformationDisplay.fxml
+++ b/src/main/resources/view/InformationDisplay.fxml
@@ -8,10 +8,10 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="displayPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" style="-fx-background-color: dimgrey;" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="displayPane" minWidth="350.0" prefWidth="350.0" style="-fx-background-color: dimgrey;" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <FlowPane fx:id="tags" layoutX="39.0" layoutY="200.0" prefHeight="33.0" prefWidth="100.0" />
-      <GridPane layoutX="232.0" layoutY="45.0">
+      <GridPane layoutX="150.0" layoutY="48.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,16 +25,16 @@
          <children>
             <Label fx:id="name" minWidth="-Infinity" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$name" GridPane.columnIndex="1" />
             <Label fx:id="phone" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$phone" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="address" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$address" wrapText="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
+            <Label fx:id="address" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$address" wrapText="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS" />
             <Label fx:id="email" minWidth="-Infinity" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$email" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label style="-fx-text-fill: white;" styleClass="cell_big_label" text="Name:" />
             <Label style="-fx-text-fill: white;" styleClass="cell_big_label" text="Phone:" GridPane.rowIndex="1" />
-            <Label style="-fx-text-fill: white;" styleClass="cell_big_label" text="Address:" GridPane.rowIndex="2" GridPane.valignment="BASELINE" />
+            <Label style="-fx-text-fill: white;" styleClass="cell_big_label" text="Address:" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
             <Label style="-fx-text-fill: white;" styleClass="cell_big_label" text="Email" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <ImageView fx:id="photo" fitHeight="150.0" fitWidth="178.0" layoutX="39.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
-      <GridPane layoutX="32.0" layoutY="265.0" prefHeight="83.0" prefWidth="286.0">
+      <ImageView fx:id="photo" fitHeight="120.0" fitWidth="100.0" layoutX="26.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true" />
+      <GridPane layoutX="26.0" layoutY="240.0" prefHeight="83.0" prefWidth="286.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.25216343668785" minWidth="30.0" prefWidth="145.25216343668785" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="96.0000272062191" minWidth="30.0" prefWidth="55.09566929606285" />
@@ -47,7 +47,7 @@
          <children>
             <Label fx:id="attendanceRate" minWidth="-Infinity" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$attendanceRate" GridPane.columnIndex="1" />
             <Label fx:id="performance" minWidth="-Infinity" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$performance" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label minWidth="-Infinity" style="-fx-text-fill: white;" styleClass="cell_big_label" text="Attendance Rate" />
+            <Label style="-fx-text-fill: white;" styleClass="cell_big_label" text="Attendance Rate" />
             <Label minWidth="-Infinity" style="-fx-text-fill: white;" styleClass="cell_big_label" text="Performance" GridPane.rowIndex="1" />
          </children>
       </GridPane>
