--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Scene?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.Scene?>
+<?import javafx.stage.Stage?>
+<?import java.net.URL?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          title="CS modbuddy" minWidth="650" minHeight="600" onCloseRequest="#handleExit">
-  <icons>
-    <Image url="@/images/logo.png" />
-  </icons>
-  <scene>
-    <Scene>
-      <stylesheets>
-        <URL value="@LightTheme.css" />
-        <URL value="@Extensions.css" />
-      </stylesheets>
+    <icons>
+        <Image url="@/images/logo.png"/>
+    </icons>
+    <scene>
+        <Scene>
+            <stylesheets>
+                <URL value="@LightTheme.css"/>
+                <URL value="@Extensions.css"/>
+            </stylesheets>
 
-      <VBox styleClass="background">
+            <VBox styleClass="background">
 
-        <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
-          <padding>
-            <Insets top="5" right="5" bottom="0" left="5" />
-          </padding>
-        </StackPane>
+                <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
+                    <padding>
+                        <Insets top="5" right="5" bottom="0" left="5"/>
+                    </padding>
+                </StackPane>
 
-        <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-                   minHeight="100" prefHeight="100" maxHeight="100">
-          <padding>
-            <Insets top="5" right="5" bottom="0" left="5" />
-          </padding>
-        </StackPane>
+                <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
+                           minHeight="100" prefHeight="100" maxHeight="100">
+                    <padding>
+                        <Insets top="5" right="5" bottom="0" left="5"/>
+                    </padding>
+                </StackPane>
 
-        <Label fx:id="title" text="\$first" styleClass="cell_big_label">
-          <padding>
-            <Insets top="5" right="5" bottom="0" left="5" />
-          </padding>
-        </Label>
-
-        <VBox fx:id="semesterList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets top="5" right="5" bottom="5" left="5" />
-          </padding>
-          <StackPane fx:id="semesterListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-        </VBox>
-      </VBox>
-    </Scene>
-  </scene>
+                <VBox>
+                    <padding>
+                        <Insets top="5" right="5" bottom="5" left="5"/>
+                    </padding>
+                    <VBox fx:id="studyPlan">
+                        <Label fx:id="title" text="\$first" styleClass="cell_big_label">
+                            <padding>
+                                <Insets left="5"/>
+                            </padding>
+                        </Label>
+                        <VBox fx:id="semesterList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
+                              VBox.vgrow="ALWAYS">
+                            <padding>
+                                <Insets top="5" right="5" bottom="5" left="5"/>
+                            </padding>
+                            <StackPane fx:id="semesterListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                        </VBox>
+                    </VBox>
+                </VBox>
+            </VBox>
+        </Scene>
+    </scene>
 </fx:root>
