--- a/src/main/resources/view/SemesterListCard.fxml
+++ b/src/main/resources/view/SemesterListCard.fxml
@@ -11,24 +11,24 @@
 
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.StackPane?>
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox id="semesterCardPane" fx:id="semesterCardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+    <VBox alignment="CENTER_LEFT" minHeight="15" GridPane.columnIndex="0">
       <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
+        <Insets top="5" right="5" bottom="5" left="5" />
       </padding>
       <HBox spacing="5" alignment="CENTER_LEFT">
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-        <Label fx:id="totalMcCount" styleClass="cell_small_label" text="\$totalMcCount" />
+        <Label fx:id="name" text="\$first" styleClass="cell_small_label" />
+        <Label fx:id="totalMcCount" styleClass="cell_big_label" text="\$totalMcCount" />
       </HBox>
-      <VBox fx:id="semesterList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
+      <VBox fx:id="moduleList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
         <padding>
-          <Insets top="10" right="10" bottom="10" left="10" />
+          <Insets top="5" bottom="5" />
         </padding>
-        <StackPane fx:id="moduleListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+        <VBox fx:id="moduleListPanelPlaceholder" spacing="5" VBox.vgrow="ALWAYS"/>
       </VBox>
     </VBox>
   </GridPane>
