--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -397,10 +397,10 @@
 
 #tags .label {
     -fx-text-fill: white;
-    -fx-background-color: #3e7b91;
-    -fx-padding: 1 3 1 3;
-    -fx-border-radius: 2;
-    -fx-background-radius: 2;
+    -fx-background-color: #1f1f1f;
+    -fx-padding: 1 5 1 5;
+    -fx-border-radius: 10;
+    -fx-background-radius: 10;
     -fx-font-size: 11;
 }
 
