--- a/src/main/resources/view/MainWindowCopy.fxml
+++ b/src/main/resources/view/MainWindowCopy.fxml
@@ -6,11 +6,8 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -83,7 +80,7 @@
                      </GridPane.margin>
                   </ImageView>
 
-                  <VBox fx:id="activityWindowPlaceholder" alignment="CENTER" GridPane.rowIndex="1">
+                  <VBox fx:id="functionIconsPlaceholder" alignment="CENTER" GridPane.rowIndex="1">
                      <children>
                         <StackPane>
                            <children>
@@ -132,28 +129,10 @@
                         <Insets bottom="5.0" left="25.0" right="5.0" top="5.0" />
                      </padding>
                   </VBox>
-                   <TabPane fx:id="activityWindow" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                       <tabs>
-                           <Tab text="EmptyTab">
-                               <content>
-                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                               </content>
-                           </Tab>
-                           <Tab fx:id="FlashcardTab" text="FlashcardTab">
-                               <fx:include fx:id="flashcardTabController" source="FlashcardTabWindow.fxml" />
-                           </Tab>
-                           <Tab fx:id="NotesTab" text="NotesTab">
-                               <fx:include fx:id="notesTabController" source="NotesTabWindow.fxml" />
-                           </Tab>
-                           <Tab fx:id="CheatsheetTab" text="CheatsheetTab">
-                               <fx:include fx:id="cheatsheetTabController" source="CheatsheetTabWindow.fxml" />
-                           </Tab>
-                       </tabs>
-                       <GridPane.margin>
-                           <Insets bottom="10.0" left="50.0" right="25.0" top="10.0" />
-                       </GridPane.margin>
-                   </TabPane>
-
+                  <StackPane fx:id="activityWindowPlaceholder" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                      <GridPane.margin>
+                        <Insets bottom="10.0" left="50.0" right="25.0" top="10.0" />
+                     </GridPane.margin></StackPane>
                </children>
                <VBox.margin>
                   <Insets />
