redesign member card

--- a/src/main/resources/view/MemberListCard.fxml
+++ b/src/main/resources/view/MemberListCard.fxml
@@ -27,6 +27,7 @@
                     </minWidth>
                 </Label>
                 <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
+                <Label fx:id="displayId" styleClass="cell_big_label" text="\$first" />
             </HBox>
             <FlowPane fx:id="tags" />
         </VBox>
