--- a/src/main/resources/view/SpendingListCard.fxml
+++ b/src/main/resources/view/SpendingListCard.fxml
@@ -30,7 +30,7 @@
       <FlowPane fx:id="tags" />
       <Label fx:id="cost" styleClass="cell_small_label" text="\$cost" />
       <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+      <Label fx:id="remark" styleClass="cell_small_label" text="\$remark" />
     </VBox>
   </GridPane>
 </HBox>
