--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -329,12 +329,18 @@
 }
 
 #filterField, #itemListPanel, #itemWebpage {
+    -fx-box-border: transparent;
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
 
 #resultDisplay .content {
     -fx-background-color: transparent, #383838, transparent, #383838;
     -fx-background-radius: 0;
+}
+
+.text-area {
+    -fx-background-insets: 0;
+    -fx-background-color: transparent, transparent, transparent, transparent;
 }
 
 #tags {
