--- a/docs/templates/_header.html.slim
+++ b/docs/templates/_header.html.slim
@@ -4,7 +4,7 @@
     nav.navbar.navbar-lg.navbar-light.bg-lighter
       .container
         a.navbar-brand href='https://ay1920s1-cs2103t-f12-2.github.io/main/'
-          img src=(site_url 'https://github.com/AY1920S1-CS2103T-F12-2/main/raw/master/docs/images/UnrealUnity.jpg') alt='Team UnrealUnity'
+          img src=(site_url 'https://github.com/AY1920S1-CS2103T-F12-2/main/raw/master/docs/images/UnrealUnity.png') alt='Team UnrealUnity'
 
 - if !(attr? 'no-site-header')
   #site-header
