--- a/src/main/resources/view/components/SidebarLeft.fxml
+++ b/src/main/resources/view/components/SidebarLeft.fxml
@@ -1,28 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #3e4d52#3e4d52;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" styleClass="Sidebar" stylesheets="@Sidebar.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleEnterOverallView" prefHeight="40.0" prefWidth="141.0" style="-fx-background-color: #79a0ab#79a0ab;" stylesheets="@../DarkTheme.css" text="OverallView" textFill="WHITE" wrapText="true">
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterOverallView" prefHeight="80.0" prefWidth="80.0" textFill="WHITE" wrapText="true">
          <font>
             <Font size="6.0" />
          </font>
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/navbar_icons/overall_view_icon.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
-      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleEnterTripManager" prefHeight="40.0" prefWidth="141.0" style="-fx-background-color: #79a0ab#79a0ab;" stylesheets="@../DarkTheme.css" text="Trip Manager" textFill="WHITE" wrapText="true">
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterTripManager" prefHeight="80.0" prefWidth="80.0" text="Trip Manager" textFill="WHITE" wrapText="true">
          <font>
             <Font size="6.0" />
          </font>
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/navbar_icons/trip_manager_icon.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
-      <Button mnemonicParsing="false" onMouseClicked="#handleEnterBookingsManager" prefHeight="40.0" prefWidth="141.0" style="-fx-background-color: #79a0ab#79a0ab;" stylesheets="@../DarkTheme.css" text="Bookings" textFill="WHITE" wrapText="true">
-         <font>
-            <Font size="6.0" />
-         </font></Button>
-      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleEnterInventoryManager" prefHeight="40.0" prefWidth="141.0" style="-fx-background-color: #79a0ab#79a0ab;" stylesheets="@../DarkTheme.css" text="Inventory" textFill="WHITE" wrapText="true">
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterBookingsManager" prefHeight="80.0" prefWidth="80.0" text="Bookings" textFill="WHITE" wrapText="true">
          <font>
             <Font size="6.0" />
          </font>
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/navbar_icons/bookings_icon.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterInventoryManager" prefHeight="80.0" prefWidth="80.0" text="Inventory" textFill="WHITE" wrapText="true">
+         <font>
+            <Font size="6.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/navbar_icons/inventory_icon.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
    </children>
 </VBox>
