Changes : - More styling for navigation bars - Remove duplicate navigation parsing in page parsers for pages with navbars, and the relavant enums (ItineraryViewParser, DayViewParser, InventoryParser) - Move above page enums and navigation parsing to NavbarCommand

--- a/src/main/resources/view/components/SidebarLeft.fxml
+++ b/src/main/resources/view/components/SidebarLeft.fxml
@@ -6,49 +6,50 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" styleClass="Sidebar" stylesheets="@Sidebar.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" spacing="10.0" styleClass="Sidebar" stylesheets="@Sidebar.css" translateX="-10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterOverallView" prefHeight="80.0" prefWidth="80.0" textFill="WHITE" wrapText="true">
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterOverallView" textFill="WHITE" wrapText="true">
          <font>
             <Font size="6.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/navbar_icons/overall_view_icon.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterTripManager" prefHeight="80.0" prefWidth="80.0" text="Trip Manager" textFill="WHITE" wrapText="true">
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterTripManager" text="Trip Manager" textFill="WHITE" wrapText="true">
          <font>
             <Font size="6.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/navbar_icons/trip_manager_icon.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterBookingsManager" prefHeight="80.0" prefWidth="80.0" text="Bookings" textFill="WHITE" wrapText="true">
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterBookingsManager" text="Bookings" textFill="WHITE" wrapText="true">
          <font>
             <Font size="6.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/navbar_icons/bookings_icon.png" />
                </image>
             </ImageView>
-         </graphic></Button>
-      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterInventoryManager" prefHeight="80.0" prefWidth="80.0" text="Inventory" textFill="WHITE" wrapText="true">
+         </graphic>
+      </Button>
+      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleEnterInventoryManager" text="Inventory" textFill="WHITE" wrapText="true">
          <font>
             <Font size="6.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/navbar_icons/inventory_icon.png" />
                </image>
