--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -360,3 +360,9 @@
     -fx-font-size: 11;
     -fx-background-insets: 2;
 }
+
+.achievement-pane {
+    -fx-background-image: url("/images/test1.jpeg");
+    -fx-background-size: cover;
+    -fx-background-color:transparent;
+}
