Add Show Ongoing Visit

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -71,11 +71,9 @@
                                 <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                             </VBox>
                         </Tab>
-                    </tabs>
-                    <tabs>
                         <Tab fx:id="ongoingVisitTabPage" text="Current Visit">
                             <!--Current Visit-->
-                            <VBox fx:id="ongoingVisit" styleClass="pane-with-border" minWidth="340" prefWidth="340"
+                            <VBox fx:id="ongoingVisitList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
                                   VBox.vgrow="ALWAYS">
                                 <padding>
                                     <Insets top="10" right="10" bottom="10" left="10"/>
