--- a/src/main/resources/view/ReminderBox.fxml
+++ b/src/main/resources/view/ReminderBox.fxml
@@ -5,5 +5,5 @@
 
 <StackPane fx:id="placeHolder" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/8"
            xmlns:fx="http://javafx.com/fxml/1">
-  <TextArea fx:id="reminderBox" editable="false" styleClass="result-display"/>
+  <TextArea fx:id="reminderBox" editable="false" styleClass="reminder-display"/>
 </StackPane>
