Create preliminary working outlines for seamless window-switching.

--- a/src/main/resources/view/AchievementsWindow.fxml
+++ b/src/main/resources/view/AchievementsWindow.fxml
@@ -19,7 +19,7 @@
     <Image url="@/images/address_book_32.png" />
   </icons>
   <scene>
-    <Scene>
+    <Scene fx:id="scene">
       <stylesheets>
         <URL value="@DarkTheme.css" />
         <URL value="@Extensions.css" />
