--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -25,10 +25,10 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-        <Label fx:id="expiryDate" text="\$first" styleClass="cell_big_label" />
-        <Label fx:id="amount" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" text="\$name" styleClass="cell_big_label" />
       </HBox>
+      <Label fx:id="amount" styleClass="cell_small_label" text="\$amount" />
+      <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate" />
       <FlowPane fx:id="tags" />
     </VBox>
   </GridPane>
