--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.stage.Stage?>
 <?import java.net.URL?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-         title="CS modbuddy" minWidth="650" minHeight="600" onCloseRequest="#handleExit">
+         title="CS modbuddy" minWidth="900" minHeight="600" onCloseRequest="#handleExit">
     <icons>
         <Image url="@/images/logo.png"/>
     </icons>
@@ -27,32 +27,40 @@
                     </padding>
                 </StackPane>
 
-                <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-                           minHeight="100" prefHeight="100" maxHeight="100">
-                    <padding>
-                        <Insets top="5" right="5" bottom="0" left="5"/>
-                    </padding>
-                </StackPane>
+                <GridPane VBox.vgrow="ALWAYS">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="45.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="55.0"/>
+                    </columnConstraints>
+                    <StackPane GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.vgrow="ALWAYS"
+                               HBox.hgrow="ALWAYS" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
+                               minHeight="100">
+                        <padding>
+                            <Insets top="5" bottom="5" left="5"/>
+                        </padding>
+                    </StackPane>
 
-                <VBox>
-                    <padding>
-                        <Insets top="5" right="5" bottom="5" left="5"/>
-                    </padding>
-                    <VBox fx:id="studyPlan">
-                        <Label fx:id="title" text="\$first" styleClass="cell_big_label">
-                            <padding>
-                                <Insets left="5"/>
-                            </padding>
-                        </Label>
-                        <VBox fx:id="semesterList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
-                              VBox.vgrow="ALWAYS">
-                            <padding>
-                                <Insets top="5" right="5" bottom="5" left="5"/>
-                            </padding>
-                            <StackPane fx:id="semesterListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                    <VBox GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.vgrow="ALWAYS"
+                          GridPane.hgrow="ALWAYS" >
+                        <padding>
+                            <Insets top="5" right="5" bottom="5" left="5"/>
+                        </padding>
+                        <VBox fx:id="studyPlan" VBox.vgrow="ALWAYS">
+                            <Label fx:id="title" text="\$first" styleClass="cell_big_label">
+                                <padding>
+                                    <Insets left="5"/>
+                                </padding>
+                            </Label>
+                            <VBox fx:id="semesterList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
+                                  VBox.vgrow="ALWAYS">
+                                <padding>
+                                    <Insets top="5" right="5" bottom="5" left="5"/>
+                                </padding>
+                                <StackPane fx:id="semesterListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                            </VBox>
                         </VBox>
                     </VBox>
-                </VBox>
+                </GridPane>
             </VBox>
         </Scene>
     </scene>
