Update UI and sample data

--- a/src/main/resources/view/QuestionListCard.fxml
+++ b/src/main/resources/view/QuestionListCard.fxml
@@ -7,30 +7,56 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
     <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
       <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
+        <Insets bottom="5" left="15" right="5" top="5" />
       </padding>
-      <HBox spacing="5" alignment="CENTER_LEFT">
+
+      <FlowPane fx:id="tags" />
+      <HBox alignment="CENTER_LEFT" spacing="5">
         <Label fx:id="id" styleClass="cell_big_label">
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" style="-fx-label-padding: 1;" styleClass="cell_big_label" text="\$first">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+         <Label fx:id="type" style="-fx-border-color: #000000; -fx-label-padding: 3; -fx-background-color: #e10000;" styleClass="cell_small_label" text="\$type">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
       </HBox>
-      <FlowPane fx:id="tags" />
-      <Label fx:id="answer" styleClass="cell_small_label" text="\$answer" />
-      <Label fx:id="type" styleClass="cell_small_label" text="\$type" />
+         <HBox prefHeight="22.0" prefWidth="120.0">
+            <children>
+            <Label fx:id="answerText" style="-fx-font-weight: bold; -fx-font-size: 15;" styleClass="cell_small_label" text="Answer: ">
+                  Answer: <font>
+                     <Font size="15.0" />
+                  </font>
+               </Label>
+               <Label fx:id="answer" style="-fx-font-size: 15;" styleClass="cell_small_label" text="\$answer">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Label>
+            </children>
+         </HBox>
       <Label fx:id="category" styleClass="cell_small_label" text="\$category" />
     </VBox>
+      <rowConstraints>
+         <RowConstraints />
+      </rowConstraints>
   </GridPane>
 </HBox>
