--- a/src/main/resources/view/ProjectDashboard.fxml
+++ b/src/main/resources/view/ProjectDashboard.fxml
@@ -1,29 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox stylesheets="@DarkTheme.css" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-  <children>
-      <VBox minHeight="600.0" HBox.hgrow="ALWAYS">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <HBox stylesheets="@DarkTheme.css" BorderPane.alignment="CENTER">
+        <children>
+            <VBox minHeight="600.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label id="notStartedLabel" contentDisplay="CENTER" text="Not Started" />
+                <ListView fx:id="taskListViewNotStarted" maxHeight="800.0" prefHeight="600.0" styleClass="pane-with-border">
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding></ListView>
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </VBox>
+            <VBox minHeight="600.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label id="doingLabel" alignment="CENTER" text="Doing" />
+                <ListView fx:id="taskListViewDoing" maxHeight="800.0" prefHeight="600.0" styleClass="pane-with-border">
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding></ListView>
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </VBox>
+            <VBox minHeight="600.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label id="doneLabel" alignment="CENTER" text="Done" />
+                <ListView fx:id="taskListViewDone" maxHeight="800.0" prefHeight="600.0" styleClass="pane-with-border">
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding></ListView>
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </VBox>
+        </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" top="20.0" />
+         </BorderPane.margin>
+      </HBox>
+   </center>
+   <right>
+      <VBox BorderPane.alignment="CENTER">
+         <padding>
+            <Insets left="20.0" right="10.0" top="10.0" />
+         </padding>
          <children>
-            <Label id="notStartedLabel" contentDisplay="CENTER" text="Not Started" />
-          <ListView fx:id="taskListViewNotStarted" maxHeight="800.0" prefHeight="600.0" styleClass="pane-with-border" />
+            <Label text="Upcoming deadlines" />
+            <ListView fx:id="taskListViewUpcomingDeadlines" prefHeight="400.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></ListView>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="20.0" right="10.0" top="100.0" />
+         </BorderPane.margin>
       </VBox>
-      <VBox minHeight="600.0" HBox.hgrow="ALWAYS">
-         <children>
-            <Label id="doingLabel" alignment="CENTER" text="Doing" />
-          <ListView fx:id="taskListViewDoing" maxHeight="800.0" prefHeight="600.0" styleClass="pane-with-border" />
-         </children>
-      </VBox>
-      <VBox minHeight="600.0" HBox.hgrow="ALWAYS">
-         <children>
-            <Label id="doneLabel" alignment="CENTER" text="Done" />
-          <ListView fx:id="taskListViewDone" maxHeight="800.0" prefHeight="600.0" styleClass="pane-with-border" />
-         </children>
-      </VBox>
-  </children>
-</HBox>
+   </right>
+</BorderPane>
